<resources>
    <string name="app_name">ProjetoAtividade01</string>
    <string name="bem_vindo">Bem Vindo!!!!</string>
    <string name="name_Insertion">Digite o seu nome</string>
    <string name="password_Insertion">Digite a sua senha</string>
    <string name="button_Login">Fazer Login</string>
    <string name="button_Deslogar">Deslogar</string>
    <string name="button_Paradas">Outras Paradas</string>
    <string name="activity_Login">Fazer Login</string>
    <string name="activity_Splashe_screen">Splash Screen</string>
    <string name="Splash_Screen_Initial">Logo inicial com nome</string>
    <string name="Splash_Screen_Logo">Logo sem nome</string>
    <string name="Button_generic">Botão</string>
    <string name="texView_generic">textView</string>
    <string name="imageView_generic">imageView</string>
    <string name="Button_Todos">Todos</string>
    <string name="CheckBox">Concluido</string>
    <string name="Button_Comments">Comments</string>
    <string name="Address">Address</string>
    <string name="Company">Company</string>
    <string name="Recycler">Recycler</string>
    <string name="pading">5dp</string>
</resources>