<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/todoLayout_Id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/texView_generic"
            android:textColor="@color/nice_blue"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/todoLayout_UserId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/texView_generic"
            android:textAlignment="viewEnd"
            android:textColor="@color/nice_blue"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/todoLayout_Title"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:padding="15dp"
                    android:text="@string/texView_generic"
                    android:textAlignment="center"
                    android:textColor="@color/nice_blue"
                    android:textSize="24sp"
                    android:textStyle="bold|italic" />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

    <CheckBox
        android:id="@+id/cbTodoLayout_Completed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/CheckBox"
        android:textColor="@color/nice_blue" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/Splash_Screen_Logo"
        app:srcCompat="@drawable/splash_screen_logo_by_leila" />
</LinearLayout>