<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/userLayout_Id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/texView_generic"
                android:textColor="@color/nice_blue"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/userLayout_Lat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/texView_generic"
                android:textColor="@color/nice_blue"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/userLayout_Lng"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/texView_generic"
                android:textAlignment="viewEnd"
                android:textColor="@color/nice_blue"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/userLayout_Name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/texView_generic"
                android:textAlignment="center"
                android:textColor="@color/nice_blue"
                android:textSize="18sp" />
            <TextView
                android:id="@+id/userLayout_UserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/texView_generic"
                android:textAlignment="center"
                android:textColor="@color/nice_blue"
                android:textSize="18sp" />
            <TextView
                android:id="@+id/userLayout_Email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/texView_generic"
                android:textAlignment="center"
                android:textColor="@color/nice_blue"
                android:textSize="18sp" />
            <TextView
                android:id="@+id/userLayout_Phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/texView_generic"
                android:textAlignment="center"
                android:textColor="@color/nice_blue"
                android:textSize="18sp" />
            <TextView
                android:id="@+id/userLayout_WebSite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/texView_generic"
                android:textAlignment="center"
                android:textColor="@color/nice_blue"
                android:textSize="18sp" />

        </LinearLayout>

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            tools:ignore="MissingConstraints">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/userLayout_Address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:text="@string/Address"
                    android:textAlignment="center"
                    android:textColor="@color/nice_blue"
                    android:textSize="24sp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/userLayout_Street"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/texView_generic"
                    android:textAlignment="center"
                    android:textColor="@color/nice_blue"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/userLayout_Suite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/texView_generic"
                    android:textAlignment="center"
                    android:textColor="@color/nice_blue"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/userLayout_City"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/texView_generic"
                    android:textAlignment="center"
                    android:textColor="@color/nice_blue"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/userLayout_ZipCode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/texView_generic"
                    android:textAlignment="center"
                    android:textColor="@color/nice_blue"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/userLayout_Company"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:text="@string/Company"
                    android:textAlignment="center"
                    android:textColor="@color/nice_blue"
                    android:textSize="24sp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/userLayout_CpnName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/texView_generic"
                    android:textAlignment="center"
                    android:textColor="@color/nice_blue"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/userLayout_CatchPhrase"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/texView_generic"
                    android:textAlignment="center"
                    android:textColor="@color/nice_blue"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/userLayout_Bs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/texView_generic"
                    android:textAlignment="center"
                    android:textColor="@color/nice_blue"
                    android:textSize="18sp" />

            </LinearLayout>
        </ScrollView>

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:contentDescription="@string/Splash_Screen_Logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scrollView2"
            app:srcCompat="@drawable/splash_screen_logo_by_leila" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>